--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <a href="https://github.com/eram003" target="_blank" title="GitHub">
                 <i class="fab fa-github"></i>
             </a>
-            <a href="https://discord.com/users/eram003" target="_blank" title="Discord">
+            <a href="https://discordapp.com/users/294302588004728832" target="_blank" title="Discord">
                 <i class="fab fa-discord"></i>
             </a>
             <a href="https://open.spotify.com/user/x3brh2mue8b1mo6b4o5q5h94q" target="_blank" title="Spotify">
