--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
                     <div class="box-content">
                         <h3>My Skills</h3>
                         <ul>
-                            <li>HTML, C, Python</li>
+                            <li>HTML, C, Python, SQL</li>
                             <li>Video Editing (Adobe Premiere Pro, Final Cut Pro, DaVinci Resolve)</li>
-                            <li>SQL</li>
+                            <li>Social Media Management</li>
                         </ul>
                     </div>
                 </div>
