--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>eram003</title>
-    <link rel="icon" href="https://i.imgur.com/jfhUvHu.png" type="image/png"> <!-- Favicon -->
+    <link rel="icon" href="https://i.imgur.com/jfhUvHu.png" type="image/png"> 
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
@@ -12,14 +12,14 @@
     <div class="glitch-bg"></div>
     
     <nav class="navbar">
-        <div class="nav-left">
+        <div class="nav-left" onclick="redirectToRandomVideo()">
             <img src="https://i.imgur.com/jfhUvHu.png" alt="Logo" class="nav-logo">
         </div>
         <div class="nav-links">
             <a href="https://github.com/eram003" target="_blank" title="GitHub">
                 <i class="fab fa-github"></i>
             </a>
-            <a href="https://discordapp.com/users/294302588004728832" target="_blank" title="Discord">
+            <a href="https://discord.com/users/eram003" target="_blank" title="Discord">
                 <i class="fab fa-discord"></i>
             </a>
             <a href="https://open.spotify.com/user/x3brh2mue8b1mo6b4o5q5h94q" target="_blank" title="Spotify">
@@ -66,7 +66,7 @@
                         <ul>
                             <li>HTML, C, Python, SQL</li>
                             <li>Video Editing (Adobe Premiere Pro, Final Cut Pro, DaVinci Resolve)</li>
-                            <li>Social Media Management</li>
+                             <li>Social Media Management</li> <!-- Added new skill -->
                         </ul>
                     </div>
                 </div>
